# src/modules/v1/auth/controller.js
@@ -1,0 +1,71 @@
+import passport from 'koa-passport'
+
+/**
+ * @apiDefine TokenError
+ * @apiError Unauthorized Invalid JWT token
+ *
+ * @apiErrorExample {json} Unauthorized-Error:
+ *     HTTP/1.1 401 Unauthorized
+ *     {
+ *       "status": 401,
+ *       "error": "Unauthorized"
+ *     }
+ */
+
+/**
+ * @api {post} /v1/auth Authenticate user
+ * @apiVersion 1.0.0
+ * @apiName AuthUser
+ * @apiGroup Auth
+ *
+ * @apiParam {String} username  User username.
+ * @apiParam {String} password  User password.
+ *
+ * @apiExample Example usage:
+ * curl -H "Content-Type: application/json" -X POST -d '{ "username": "johndoe, "password": "foo" }' localhost:3000/v1/auth
+ *
+ * @apiSuccess {Object}   user           User object
+ * @apiSuccess {ObjectId} user._id       User id
+ * @apiSuccess {String}   user.name      User name
+ * @apiSuccess {String}   user.username  User username
+ * @apiSuccess {String}   token          Encoded JWT
+ *
+ * @apiSuccessExample {json} Success-Response:
+ *     HTTP/1.1 200 OK
+ *     {
+ *       "user": {
+ *          "_id": "56bd1da600a526986cf65c80"
+ *          "username": "johndoe"
+ *        },
+ *       "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiYWRtaW4iOnRydWV9.TJVA95OrM7E2cBab30RMHrHDcEfxjoYZgeFONFh7HgQ"
+ *     }
+ *
+ * @apiError Unauthorized Incorrect credentials
+ *
+ * @apiErrorExample {json} Error-Response:
+ *     HTTP/1.1 401 Unauthorized
+ *     {
+ *       "status": 401,
+ *       "error": "Unauthorized"
+ *     }
+ */
+
+export async function authUser (ctx, next) {
+  console.log("authUser")
+  return passport.authenticate('local', (err, user) => {
+    if (err || !user) {
+      ctx.throw(401)
+    }
+
+    const token = user.generateToken()
+
+    const response = user.toJSON()
+
+    delete response.password
+
+    ctx.body = {
+      token,
+      user: response
+    }
+  })(ctx, next)
+}
