# src/modules/v2/users/router.js
@@ -1,0 +1,15 @@
+import { ensureUser } from '../../../middleware/validators'
+import * as user from './controller'
+
+export const baseUrl = '/users'
+
+export default [
+  {
+    method: 'GET',
+    route: '/',
+    handlers: [
+      ensureUser,
+      user.getUsers
+    ]
+  }
+]
